--- a/config/database.yml
+++ b/config/database.yml
@@ -3,8 +3,8 @@ development:
   database: bookl_development
   pool: 5
   host: localhost
-  username:
-  password:
+  username: postgres
+  password: password
 
 test:
   adapter: postgresql
@@ -12,5 +12,5 @@ test:
   database: bookl_test
   host: localhost
   pool: 5
-  username:
-  password:
+  username: postgres
+  password: password
